# QwenPaw

./: .dockerignore  .gitignore  AUDIT_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Makefile  README.md  SECURITY.md  build.sh  manifest  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  condarc  release-duty-roster.yml
.github/ISSUE_TEMPLATE/: 1-question.md  4-bug_report.md  5-support_environment.md  config.yml
.github/workflows/: _e2e-job.yml  e2e-integration.yml  first-time-contributor-welcome.yml  frontend-tests.yml  full-tests-nightly.yml  issue-welcome.yml  release-duty.yml  tests.yml
app/ui/: api.cgi  config  index.cgi
app/www/: index.html
cmd/: config_callback  install_callback  main  upgrade_callback
console/: .gitignore  vite.config.ts
console/src-tauri/: .gitignore  Cargo.toml  build.rs  nsis-hooks.nsh  vite.bootstrap.config.ts
console/src-tauri/capabilities/: default.json
console/src-tauri/nsis/: stop-backend-sidecar.ps1  update-qwenpaw-path.ps1
console/src-tauri/nsis-languages/: English.nsh  Indonesian.nsh  Japanese.nsh  PortugueseBR.nsh  Russian.nsh  SimpChinese.nsh
console/src-tauri/permissions/: backend-download.toml  backend.toml  open-external-link.toml
console/src-tauri/src/: backend.rs  backend_download.rs  external_link.rs  lib.rs
console/src-tauri/src/backend/: events.rs
deploy/: entrypoint.sh
e2e/: conftest.py
scripts/: README.md  check-channels.sh  check_channel_contracts.py  docker_build.sh  docker_sync_latest.sh  run_tests.py
website/: README.md  pnpm-lock.yaml  tsconfig.json
wizard/: install  uninstall
(+875 files in other folders)
