[package]
name = "qwenpaw-desktop"
version = "0.1.0"
description = "QwenPaw Desktop Tauri shell that wraps the QwenPaw Console frontend and runs the Python FastAPI backend as a local sidecar process."
authors = ["QwenPaw Contributors"]
license = "Apache-2.0"
repository = "https://github.com/agentscope-ai/QwenPaw"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
